syntax = "proto3";

package uptimeping.forge.v1;

//import "google/api/annotations.proto";

option go_package = "gitlab.com/rodionov_v_al/UptimePingPlatform/proto/api/forge/v1";

// ForgeService предоставляет методы для генерации конфигураций из .proto файлов
service ForgeService {
  // ParseProto загружает и парсит .proto файл
  rpc ParseProto(ParseProtoRequest) returns (ParseProtoResponse) {}
  
  // GenerateConfig генерирует конфигурацию проверки из .proto файла
  rpc GenerateConfig(GenerateConfigRequest) returns (GenerateConfigResponse) {}
  
  // GenerateCode генерирует код для проверки gRPC методов
  rpc GenerateCode(GenerateCodeRequest) returns (GenerateCodeResponse) {}
  
  // ValidateProto проверяет валидность .proto файла
  rpc ValidateProto(ValidateProtoRequest) returns (ValidateProtoResponse) {}
}

// ParseProtoRequest содержит данные для парсинга .proto файла
message ParseProtoRequest {
  string proto_content = 1;
  string file_name = 2;
}

// ParseProtoResponse содержит результат парсинга
message ParseProtoResponse {
  ServiceInfo service_info = 1;
  bool is_valid = 2;
  repeated string warnings = 3;
}

// ServiceInfo содержит информацию о сервисе из .proto файла
message ServiceInfo {
  string package_name = 1;
  string service_name = 2;
  repeated MethodInfo methods = 3;
  repeated MessageInfo messages = 4;
}

// MethodInfo содержит информацию о методе
message MethodInfo {
  string name = 1;
  string input_type = 2;
  string output_type = 3;
  string http_method = 4;
  string http_path = 5;
}

// MessageInfo содержит информацию о сообщении
message MessageInfo {
  string name = 1;
  repeated FieldInfo fields = 2;
}

// FieldInfo содержит информацию о поле
message FieldInfo {
  string name = 1;
  string type = 2;
  int32 number = 3;
  bool repeated = 4;
}

// GenerateConfigRequest содержит данные для генерации конфигурации
message GenerateConfigRequest {
  string proto_content = 1;
  ConfigOptions options = 2;
}

// ConfigOptions содержит опции генерации конфигурации
message ConfigOptions {
  string target_host = 1;
  int32 target_port = 2;
  int32 check_interval = 3;
  int32 timeout = 4;
  string tenant_id = 5;
  map<string, string> metadata = 6;
}

// GenerateConfigResponse содержит сгенерированную конфигурацию
message GenerateConfigResponse {
  string config_yaml = 1;
  CheckConfig check_config = 2;
}

// CheckConfig содержит конфигурацию проверки
message CheckConfig {
  string name = 1;
  CheckType type = 2;
  string target = 3;
  int32 interval = 4;
  int32 timeout = 5;
  string config = 6;
}

// CheckType определяет тип проверки
enum CheckType {
  CHECK_TYPE_UNSPECIFIED = 0;
  CHECK_TYPE_HTTP = 1;
  CHECK_TYPE_GRPC = 2;
  CHECK_TYPE_GRAPHQL = 3;
}

// GenerateCodeRequest содержит данные для генерации кода
message GenerateCodeRequest {
  string proto_content = 1;
  CodeOptions options = 2;
}

// CodeOptions содержит опции генерации кода
message CodeOptions {
  string language = 1;
  string framework = 2;
  string template = 3;
}

// GenerateCodeResponse содержит сгенерированный код
message GenerateCodeResponse {
  string code = 1;
  string filename = 2;
  string language = 3;
}

// ValidateProtoRequest содержит данные для валидации .proto файла
message ValidateProtoRequest {
  string proto_content = 1;
}

// ValidateProtoResponse содержит результат валидации
message ValidateProtoResponse {
  bool is_valid = 1;
  repeated string errors = 2;
  repeated string warnings = 3;
}