package main

import (
	"context"
	"encoding/json"
	"fmt"
	"net/http"
	"os"
	"strings"
	"time"

	"github.com/go-redis/redis/v8"
	"github.com/spf13/cobra"
)

// TokenInfo —Ö—Ä–∞–Ω–∏—Ç –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ —Ç–æ–∫–µ–Ω–∞—Ö
type TokenInfo struct {
	AccessToken  string    `json:"access_token"`
	RefreshToken string    `json:"refresh_token"`
	TenantID     string    `json:"tenant_id"`
	TenantName   string    `json:"tenant_name"`
	Email        string    `json:"email"`
	ExpiresAt    time.Time `json:"expires_at"`
}

// RedisTokenStore —Ö—Ä–∞–Ω–∏—Ç —Ç–æ–∫–µ–Ω—ã –≤ Redis
type RedisTokenStore struct {
	client *redis.Client
	prefix string
}

// NewRedisTokenStore —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤–æ–µ —Ö—Ä–∞–Ω–∏–ª–∏—â–µ —Ç–æ–∫–µ–Ω–æ–≤ –≤ Redis
func NewRedisTokenStore() (*RedisTokenStore, error) {
	redisAddr := "localhost:6379"
	// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –∑–∞–ø—É—â–µ–Ω—ã –ª–∏ –º—ã –≤ Docker
	if os.Getenv("ENVIRONMENT") == "dev" && os.Getenv("REDIS_ADDR") == "" {
		// –í Docker –∫–æ–Ω—Ç–µ–π–Ω–µ—Ä–µ Redis –¥–æ—Å—Ç—É–ø–µ–Ω –ø–æ –∏–º–µ–Ω–∏ —Å–µ—Ä–≤–∏—Å–∞
		redisAddr = "redis:6379"
	}

	rdb := redis.NewClient(&redis.Options{
		Addr:     redisAddr,
		Password: "",
		DB:       0,
	})

	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()

	_, err := rdb.Ping(ctx).Result()
	if err != nil {
		return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –∫ Redis: %w", err)
	}

	return &RedisTokenStore{
		client: rdb,
		prefix: "uptimeping:cli:tokens:",
	}, nil
}

// SaveTokens —Å–æ—Ö—Ä–∞–Ω—è–µ—Ç —Ç–æ–∫–µ–Ω—ã –≤ Redis
func (rts *RedisTokenStore) SaveTokens(tokenInfo *TokenInfo) error {
	ctx := context.Background()

	data, err := json.Marshal(tokenInfo)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–µ—Ä–∏–∞–ª–∏–∑–∞—Ü–∏–∏ —Ç–æ–∫–µ–Ω–æ–≤: %w", err)
	}

	key := rts.prefix + "current"

	// –°–æ—Ö—Ä–∞–Ω—è–µ–º —Å TTL —Ä–∞–≤–Ω—ã–º –≤—Ä–µ–º–µ–Ω–∏ –∂–∏–∑–Ω–∏ —Ç–æ–∫–µ–Ω–∞
	ttl := time.Until(tokenInfo.ExpiresAt)
	if ttl <= 0 {
		ttl = time.Hour // –ø–æ —É–º–æ–ª—á–∞–Ω–∏—é 1 —á–∞—Å
	}

	err = rts.client.Set(ctx, key, data, ttl).Err()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ—Ö—Ä–∞–Ω–µ–Ω–∏—è —Ç–æ–∫–µ–Ω–æ–≤ –≤ Redis: %w", err)
	}

	fmt.Printf("üíæ –¢–æ–∫–µ–Ω —Å–æ—Ö—Ä–∞–Ω–µ–Ω –≤ Redis —Å TTL: %v\n", ttl)
	return nil
}

// LoadTokens –∑–∞–≥—Ä—É–∂–∞–µ—Ç —Ç–æ–∫–µ–Ω—ã –∏–∑ Redis
func (rts *RedisTokenStore) LoadTokens() (*TokenInfo, error) {
	ctx := context.Background()

	key := rts.prefix + "current"
	data, err := rts.client.Get(ctx, key).Result()
	if err != nil {
		if err == redis.Nil {
			return nil, fmt.Errorf("—Ç–æ–∫–µ–Ω—ã –Ω–µ –Ω–∞–π–¥–µ–Ω—ã")
		}
		return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ —Ç–æ–∫–µ–Ω–æ–≤ –∏–∑ Redis: %w", err)
	}

	var tokenInfo TokenInfo
	err = json.Unmarshal([]byte(data), &tokenInfo)
	if err != nil {
		return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ –¥–µ—Å–µ—Ä–∏–∞–ª–∏–∑–∞—Ü–∏–∏ —Ç–æ–∫–µ–Ω–æ–≤: %w", err)
	}

	return &tokenInfo, nil
}

// ClearTokens —É–¥–∞–ª—è–µ—Ç —Ç–æ–∫–µ–Ω—ã –∏–∑ Redis
func (rts *RedisTokenStore) ClearTokens() error {
	ctx := context.Background()

	key := rts.prefix + "current"
	err := rts.client.Del(ctx, key).Err()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —É–¥–∞–ª–µ–Ω–∏—è —Ç–æ–∫–µ–Ω–æ–≤ –∏–∑ Redis: %w", err)
	}

	return nil
}

// Close –∑–∞–∫—Ä—ã–≤–∞–µ—Ç —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å Redis
func (rts *RedisTokenStore) Close() error {
	return rts.client.Close()
}

// HTTPClient HTTP –∫–ª–∏–µ–Ω—Ç –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å API Gateway
type HTTPClient struct {
	baseURL    string
	client     *http.Client
	tokenStore *RedisTokenStore
}

// NewHTTPClient —Å–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π HTTP –∫–ª–∏–µ–Ω—Ç
func NewHTTPClient(baseURL string, tokenStore *RedisTokenStore) *HTTPClient {
	return &HTTPClient{
		baseURL: baseURL,
		client: &http.Client{
			Timeout: 30 * time.Second,
		},
		tokenStore: tokenStore,
	}
}

// makeRequest –≤—ã–ø–æ–ª–Ω—è–µ—Ç HTTP –∑–∞–ø—Ä–æ—Å —Å –∞–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏–µ–π
func (c *HTTPClient) makeRequest(method, endpoint string, body interface{}, requireAuth bool) (*http.Response, error) {
	ctx := context.Background()

	var req *http.Request
	var err error
	if body != nil {
		jsonBody, err := json.Marshal(body)
		if err != nil {
			return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ –∫–æ–¥–∏—Ä–æ–≤–∞–Ω–∏—è —Ç–µ–ª–∞ –∑–∞–ø—Ä–æ—Å–∞: %w", err)
		}
		req, err = http.NewRequestWithContext(ctx, method, c.baseURL+endpoint, strings.NewReader(string(jsonBody)))
		if err != nil {
			return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –∑–∞–ø—Ä–æ—Å–∞: %w", err)
		}
		req.Header.Set("Content-Type", "application/json")
	} else {
		req, err = http.NewRequestWithContext(ctx, method, c.baseURL+endpoint, nil)
		if err != nil {
			return nil, fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –∑–∞–ø—Ä–æ—Å–∞: %w", err)
		}
	}

	// –î–æ–±–∞–≤–ª—è–µ–º –∑–∞–≥–æ–ª–æ–≤–æ–∫ –∞–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏–∏ —Ç–æ–ª—å–∫–æ –µ—Å–ª–∏ —Ç—Ä–µ–±—É–µ—Ç—Å—è
	if requireAuth {
		tokenInfo, err := c.tokenStore.LoadTokens()
		if err != nil {
			return nil, fmt.Errorf("—Ç–æ–∫–µ–Ω –∞–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏–∏ –Ω–µ –Ω–∞–π–¥–µ–Ω: %w", err)
		}
		req.Header.Set("Authorization", "Bearer "+tokenInfo.AccessToken)
	}

	req.Header.Set("User-Agent", "UptimePing-CLI/2.0")

	return c.client.Do(req)
}

// –ì–ª–æ–±–∞–ª—å–Ω—ã–µ –ø–µ—Ä–µ–º–µ–Ω–Ω—ã–µ
var (
	tokenStore *RedisTokenStore
	httpClient *HTTPClient
)

// –ì–ª–æ–±–∞–ª—å–Ω—ã–µ —Ñ–ª–∞–≥–∏
var (
	emailFlag         string
	passwordFlag      string
	tenantFlag        string
	checkNameFlag     string
	checkTypeFlag     string
	checkURLFlag      string
	checkIntervalFlag int
	checkTimeoutFlag  int
)

func main() {
	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è Redis —Ö—Ä–∞–Ω–∏–ª–∏—â–∞
	var err error
	tokenStore, err = NewRedisTokenStore()
	if err != nil {
		fmt.Printf("‚ùå –û—à–∏–±–∫–∞ –∏–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏–∏ Redis: %v\n", err)
		os.Exit(1)
	}
	defer tokenStore.Close()

	// –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è HTTP –∫–ª–∏–µ–Ω—Ç–∞
	apiURL := "http://localhost:8080"
	// –ü—Ä–æ–≤–µ—Ä—è–µ–º, –∑–∞–ø—É—â–µ–Ω—ã –ª–∏ –º—ã –≤ Docker
	if os.Getenv("ENVIRONMENT") == "dev" {
		// –í Docker –∫–æ–Ω—Ç–µ–π–Ω–µ—Ä–µ API Gateway –¥–æ—Å—Ç—É–ø–µ–Ω –ø–æ –∏–º–µ–Ω–∏ —Å–µ—Ä–≤–∏—Å–∞
		apiURL = "http://api-gateway:8080"
	}
	httpClient = NewHTTPClient(apiURL, tokenStore)

	// –ö–æ—Ä–Ω–µ–≤–∞—è –∫–æ–º–∞–Ω–¥–∞
	rootCmd := &cobra.Command{
		Use:   "cli",
		Short: "UptimePing CLI",
		Long:  "UptimePing CLI - –∏–Ω—Å—Ç—Ä—É–º–µ–Ω—Ç –¥–ª—è —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è –º–æ–Ω–∏—Ç–æ—Ä–∏–Ω–≥–æ–º –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏ —Å–µ—Ä–≤–∏—Å–æ–≤",
	}

	// Auth –∫–æ–º–∞–Ω–¥—ã
	authCmd := &cobra.Command{
		Use:   "auth",
		Short: "–£–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–µ–π",
		Long:  "–ö–æ–º–∞–Ω–¥—ã –¥–ª—è –≤—Ö–æ–¥–∞, –≤—ã—Ö–æ–¥–∞, —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏ –∏ –ø—Ä–æ–≤–µ—Ä–∫–∏ —Å—Ç–∞—Ç—É—Å–∞",
	}

	// Auth register
	registerCmd := &cobra.Command{
		Use:   "register",
		Short: "–ó–∞—Ä–µ–≥–∏—Å—Ç—Ä–∏—Ä–æ–≤–∞—Ç—å –Ω–æ–≤–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è",
		Run: func(cmd *cobra.Command, args []string) {
			fmt.Printf("üîÑ –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è: %s\n", emailFlag)
			fmt.Printf("üíæ –ò—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è Redis —Ö—Ä–∞–Ω–∏–ª–∏—â–µ —Ç–æ–∫–µ–Ω–æ–≤\n")

			// –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è —á–µ—Ä–µ–∑ API Gateway
			body := map[string]interface{}{
				"email":       emailFlag,
				"password":    passwordFlag,
				"tenant_name": tenantFlag,
			}

			resp, err := httpClient.makeRequest("POST", "/api/v1/auth/register", body, false)
			if err != nil {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏–∏: %v\n", err)
				os.Exit(1)
			}
			defer resp.Body.Close()

			if resp.StatusCode == http.StatusCreated {
				// –ü–∞—Ä—Å–∏–º –æ—Ç–≤–µ—Ç –∏ —Å–æ—Ö—Ä–∞–Ω—è–µ–º —Ç–æ–∫–µ–Ω
				var tokenResponse map[string]interface{}
				json.NewDecoder(resp.Body).Decode(&tokenResponse)

				// API Gateway –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ç–æ–∫–µ–Ω—ã –ø—Ä—è–º–æ –≤ –∫–æ—Ä–Ω–µ
				if tokenResponse["access_token"] != nil {
					tokenInfo := &TokenInfo{
						AccessToken:  tokenResponse["access_token"].(string),
						RefreshToken: tokenResponse["refresh_token"].(string),
						Email:        emailFlag,
						ExpiresAt:    time.Now().Add(time.Hour), // TODO: –ø–æ–ª—É—á–∏—Ç—å –∏–∑ –æ—Ç–≤–µ—Ç–∞
					}

					// –î–æ–±–∞–≤–ª—è–µ–º tenant_id –µ—Å–ª–∏ –æ–Ω –µ—Å—Ç—å –≤ –æ—Ç–≤–µ—Ç–µ
					if tenantID, ok := tokenResponse["tenant_id"].(string); ok {
						tokenInfo.TenantID = tenantID
					}

					err = tokenStore.SaveTokens(tokenInfo)
					if err != nil {
						fmt.Printf("‚ö†Ô∏è  –ü—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ: –Ω–µ —É–¥–∞–ª–æ—Å—å —Å–æ—Ö—Ä–∞–Ω–∏—Ç—å —Ç–æ–∫–µ–Ω: %v\n", err)
					} else {
						fmt.Printf("üíæ –¢–æ–∫–µ–Ω —Å–æ—Ö—Ä–∞–Ω–µ–Ω –≤ Redis\n")
					}
				}
			}

			fmt.Printf("‚úÖ –†–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è —É—Å–ø–µ—à–Ω–∞!\n")
			fmt.Printf("üë§ –ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å: %s\n", emailFlag)
			if tenantFlag != "" {
				fmt.Printf("üè¢ –¢–µ–Ω–∞–Ω—Ç: %s\n", tenantFlag)
			}
		},
	}
	registerCmd.Flags().StringVar(&emailFlag, "email", "", "Email –∞–¥—Ä–µ—Å")
	registerCmd.Flags().StringVar(&passwordFlag, "password", "", "–ü–∞—Ä–æ–ª—å")
	registerCmd.Flags().StringVar(&tenantFlag, "tenant", "", "–ò–º—è —Ç–µ–Ω–∞–Ω—Ç–∞")
	registerCmd.MarkFlagRequired("email")
	registerCmd.MarkFlagRequired("password")

	// Auth login
	loginCmd := &cobra.Command{
		Use:   "login",
		Short: "–í–æ–π—Ç–∏ –≤ —Å–∏—Å—Ç–µ–º—É",
		Run: func(cmd *cobra.Command, args []string) {
			fmt.Printf("üîÑ –í—Ö–æ–¥ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è: %s\n", emailFlag)
			fmt.Printf("üíæ –ò—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è Redis —Ö—Ä–∞–Ω–∏–ª–∏—â–µ —Ç–æ–∫–µ–Ω–æ–≤\n")

			body := map[string]interface{}{
				"email":    emailFlag,
				"password": passwordFlag,
			}

			resp, err := httpClient.makeRequest("POST", "/api/v1/auth/login", body, false)
			if err != nil {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞ –≤—Ö–æ–¥–∞: %v\n", err)
				os.Exit(1)
			}
			defer resp.Body.Close()

			if resp.StatusCode == http.StatusOK {
				var response map[string]interface{}
				json.NewDecoder(resp.Body).Decode(&response)

				// API Gateway –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç —Ç–æ–∫–µ–Ω—ã –ø—Ä—è–º–æ –≤ –∫–æ—Ä–Ω–µ
				if response["access_token"] != nil {
					tokenInfo := &TokenInfo{
						AccessToken:  response["access_token"].(string),
						RefreshToken: response["refresh_token"].(string),
						Email:        emailFlag,
						ExpiresAt:    time.Now().Add(time.Hour), // TODO: –ø–æ–ª—É—á–∏—Ç—å –∏–∑ –æ—Ç–≤–µ—Ç–∞
					}

					// –î–æ–±–∞–≤–ª—è–µ–º tenant_id –µ—Å–ª–∏ –æ–Ω –µ—Å—Ç—å –≤ –æ—Ç–≤–µ—Ç–µ
					if tenantID, ok := response["tenant_id"].(string); ok {
						tokenInfo.TenantID = tenantID
					}

					err = tokenStore.SaveTokens(tokenInfo)
					if err != nil {
						fmt.Printf("‚ö†Ô∏è  –ü—Ä–µ–¥—É–ø—Ä–µ–∂–¥–µ–Ω–∏–µ: –Ω–µ —É–¥–∞–ª–æ—Å—å —Å–æ—Ö—Ä–∞–Ω–∏—Ç—å —Ç–æ–∫–µ–Ω: %v\n", err)
					}
				}
			}

			fmt.Printf("‚úÖ –í—Ö–æ–¥ –≤—ã–ø–æ–ª–Ω–µ–Ω —É—Å–ø–µ—à–Ω–æ!\n")
			fmt.Printf("üë§ –ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å: %s\n", emailFlag)
		},
	}
	loginCmd.Flags().StringVar(&emailFlag, "email", "", "Email –∞–¥—Ä–µ—Å")
	loginCmd.Flags().StringVar(&passwordFlag, "password", "", "–ü–∞—Ä–æ–ª—å")
	loginCmd.MarkFlagRequired("email")
	loginCmd.MarkFlagRequired("password")

	// Auth status
	statusCmd := &cobra.Command{
		Use:   "status",
		Short: "–ü—Ä–æ–≤–µ—Ä–∏—Ç—å —Å—Ç–∞—Ç—É—Å –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏",
		Run: func(cmd *cobra.Command, args []string) {
			fmt.Printf("üíæ –ü—Ä–æ–≤–µ—Ä–∫–∞ Redis —Ö—Ä–∞–Ω–∏–ª–∏—â–∞ —Ç–æ–∫–µ–Ω–æ–≤\n")

			tokenInfo, err := tokenStore.LoadTokens()
			if err != nil {
				fmt.Printf("‚ùå –ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –Ω–µ –∞–≤—Ç–æ—Ä–∏–∑–æ–≤–∞–Ω: %v\n", err)
				os.Exit(1)
			}

			fmt.Printf("‚úÖ –ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å –∞–≤—Ç–æ—Ä–∏–∑–æ–≤–∞–Ω\n")
			fmt.Printf("üë§ Email: %s\n", tokenInfo.Email)
			fmt.Printf("üè¢ –¢–µ–Ω–∞–Ω—Ç: %s\n", tokenInfo.TenantName)
			fmt.Printf("‚è∞ –¢–æ–∫–µ–Ω –∏—Å—Ç–µ–∫–∞–µ—Ç: %s\n", tokenInfo.ExpiresAt.Format("2006-01-02 15:04:05"))
			fmt.Printf("‚è≥ TTL: %v\n", time.Until(tokenInfo.ExpiresAt))
		},
	}

	// Auth logout
	logoutCmd := &cobra.Command{
		Use:   "logout",
		Short: "–í—ã–π—Ç–∏ –∏–∑ —Å–∏—Å—Ç–µ–º—ã",
		Run: func(cmd *cobra.Command, args []string) {
			fmt.Printf("üíæ –ò—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è Redis —Ö—Ä–∞–Ω–∏–ª–∏—â–µ —Ç–æ–∫–µ–Ω–æ–≤\n")

			err := tokenStore.ClearTokens()
			if err != nil {
				fmt.Printf("‚ö†Ô∏è  Warning: failed to clear tokens from Redis: %v\n", err)
			}

			fmt.Printf("‚úÖ –í—ã—Ö–æ–¥ –≤—ã–ø–æ–ª–Ω–µ–Ω —É—Å–ø–µ—à–Ω–æ!\n")
			fmt.Printf("üíæ –¢–æ–∫–µ–Ω—ã —É–¥–∞–ª–µ–Ω—ã –∏–∑ Redis\n")
		},
	}

	// –î–æ–±–∞–≤–ª—è–µ–º auth –∫–æ–º–∞–Ω–¥—ã
	authCmd.AddCommand(registerCmd)
	authCmd.AddCommand(loginCmd)
	authCmd.AddCommand(statusCmd)
	authCmd.AddCommand(logoutCmd)

	// Checks –∫–æ–º–∞–Ω–¥—ã
	checksCmd := &cobra.Command{
		Use:   "checks",
		Short: "–£–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∞–º–∏",
		Long:  "–ö–æ–º–∞–Ω–¥—ã –¥–ª—è —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∞–º–∏ –º–æ–Ω–∏—Ç–æ—Ä–∏–Ω–≥–∞",
	}

	// Checks list
	listCmd := &cobra.Command{
		Use:   "list",
		Short: "–ü–æ–ª—É—á–∏—Ç—å —Å–ø–∏—Å–æ–∫ –ø—Ä–æ–≤–µ—Ä–æ–∫",
		Run: func(cmd *cobra.Command, args []string) {
			fmt.Printf("üîÑ –ü–æ–ª—É—á–µ–Ω–∏–µ —Å–ø–∏—Å–∫–∞ –ø—Ä–æ–≤–µ—Ä–æ–∫...\n")
			fmt.Printf("üíæ –ò—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è Redis —Ö—Ä–∞–Ω–∏–ª–∏—â–µ —Ç–æ–∫–µ–Ω–æ–≤\n")

			resp, err := httpClient.makeRequest("GET", "/api/v1/checks", nil, true)
			if err != nil {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å–ø–∏—Å–∫–∞ –ø—Ä–æ–≤–µ—Ä–æ–∫: %v\n", err)
				os.Exit(1)
			}
			defer resp.Body.Close()

			if resp.StatusCode == http.StatusOK {
				var response map[string]interface{}
				json.NewDecoder(resp.Body).Decode(&response)

				if checks, ok := response["checks"].([]interface{}); ok && len(checks) > 0 {
					fmt.Printf("‚úÖ –ù–∞–π–¥–µ–Ω–æ %d –ø—Ä–æ–≤–µ—Ä–æ–∫:\n\n", len(checks))
					for i, check := range checks {
						if checkMap, ok := check.(map[string]interface{}); ok {
							fmt.Printf("%d. üìã %s\n", i+1, checkMap["name"])
							fmt.Printf("   ID: %s\n", checkMap["id"])
							fmt.Printf("   –¢–∏–ø: %s\n", checkMap["type"])
							fmt.Printf("   –¶–µ–ª—å: %s\n", checkMap["target"])
							fmt.Printf("   –°—Ç–∞—Ç—É—Å: %s\n", checkMap["status"])
							fmt.Println()
						}
					}
				} else {
					fmt.Printf("üì≠ –ü—Ä–æ–≤–µ—Ä–∫–∏ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã\n")
				}
			} else {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞: —Å–µ—Ä–≤–µ—Ä –≤–µ—Ä–Ω—É–ª —Å—Ç–∞—Ç—É—Å %d\n", resp.StatusCode)
			}
		},
	}

	// Checks create
	createCmd := &cobra.Command{
		Use:   "create",
		Short: "–°–æ–∑–¥–∞—Ç—å –Ω–æ–≤—É—é –ø—Ä–æ–≤–µ—Ä–∫—É",
		Run: func(cmd *cobra.Command, args []string) {
			if checkNameFlag == "" {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞: --name –æ–±—è–∑–∞—Ç–µ–ª–µ–Ω\n")
				os.Exit(1)
			}
			if checkTypeFlag == "" {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞: --type –æ–±—è–∑–∞—Ç–µ–ª–µ–Ω (http, tcp, icmp, grpc)\n")
				os.Exit(1)
			}
			if checkURLFlag == "" {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞: --url –æ–±—è–∑–∞—Ç–µ–ª–µ–Ω\n")
				os.Exit(1)
			}

			fmt.Printf("üîÑ –°–æ–∑–¥–∞–Ω–∏–µ –Ω–æ–≤–æ–π –ø—Ä–æ–≤–µ—Ä–∫–∏...\n")
			fmt.Printf("üíæ –ò—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è Redis —Ö—Ä–∞–Ω–∏–ª–∏—â–µ —Ç–æ–∫–µ–Ω–æ–≤\n")

			check := map[string]interface{}{
				"name":     checkNameFlag,
				"type":     checkTypeFlag,
				"url":      checkURLFlag, // –ò—Å–ø—Ä–∞–≤–ª–µ–Ω–æ: url –≤–º–µ—Å—Ç–æ target
				"interval": checkIntervalFlag,
				"timeout":  checkTimeoutFlag,
				"enabled":  true,
			}

			resp, err := httpClient.makeRequest("POST", "/api/v1/checks", check, true)
			if err != nil {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∏: %v\n", err)
				os.Exit(1)
			}
			defer resp.Body.Close()

			if resp.StatusCode == http.StatusCreated {
				var response map[string]interface{}
				json.NewDecoder(resp.Body).Decode(&response)

				fmt.Printf("‚úÖ –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–æ–∑–¥–∞–Ω–∞ —É—Å–ø–µ—à–Ω–æ!\n")
				fmt.Printf("üìã –ù–∞–∑–≤–∞–Ω–∏–µ: %s\n", response["name"])
				fmt.Printf("üÜî ID: %s\n", response["id"])
				fmt.Printf("üåê –¢–∏–ø: %s\n", response["check_type"])
				fmt.Printf("üéØ –¶–µ–ª—å: %s\n", response["url"])
				fmt.Printf("‚è±Ô∏è –ò–Ω—Ç–µ—Ä–≤–∞–ª: %v —Å–µ–∫\n", response["interval"])
				fmt.Printf("‚è≥Ô∏è –¢–∞–π–º–∞—É—Ç: %v —Å–µ–∫\n", response["timeout"])
				fmt.Printf("‚úÖ –°—Ç–∞—Ç—É—Å: %s\n", response["status"])
			} else {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞: —Å–µ—Ä–≤–µ—Ä –≤–µ—Ä–Ω—É–ª —Å—Ç–∞—Ç—É—Å %d\n", resp.StatusCode)
			}
		},
	}
	createCmd.Flags().StringVar(&checkNameFlag, "name", "", "–ù–∞–∑–≤–∞–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏")
	createCmd.Flags().StringVar(&checkTypeFlag, "type", "", "–¢–∏–ø –ø—Ä–æ–≤–µ—Ä–∫–∏ (http, tcp, icmp, grpc)")
	createCmd.Flags().StringVar(&checkURLFlag, "url", "", "URL –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏")
	createCmd.Flags().IntVar(&checkIntervalFlag, "interval", 60, "–ò–Ω—Ç–µ—Ä–≤–∞–ª –≤ —Å–µ–∫—É–Ω–¥–∞—Ö")
	createCmd.Flags().IntVar(&checkTimeoutFlag, "timeout", 10, "–¢–∞–π–º–∞—É—Ç –≤ —Å–µ–∫—É–Ω–¥–∞—Ö")
	createCmd.MarkFlagRequired("name")
	createCmd.MarkFlagRequired("type")
	createCmd.MarkFlagRequired("url")

	// Checks get
	getCmd := &cobra.Command{
		Use:   "get",
		Short: "–ü–æ–ª—É—á–∏—Ç—å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø—Ä–æ–≤–µ—Ä–∫–µ",
		Args:  cobra.ExactArgs(1),
		Run: func(cmd *cobra.Command, args []string) {
			checkID := args[0]
			fmt.Printf("üîÑ –ü–æ–ª—É—á–µ–Ω–∏–µ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏–∏ –æ –ø—Ä–æ–≤–µ—Ä–∫–µ %s...\n", checkID)

			resp, err := httpClient.makeRequest("GET", "/api/v1/checks/"+checkID, nil, true)
			if err != nil {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∏: %v\n", err)
				os.Exit(1)
			}
			defer resp.Body.Close()

			if resp.StatusCode == http.StatusOK {
				var response map[string]interface{}
				json.NewDecoder(resp.Body).Decode(&response)

				if data, ok := response["data"].(map[string]interface{}); ok {
					fmt.Printf("‚úÖ –ò–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è –æ –ø—Ä–æ–≤–µ—Ä–∫–µ:\n")
					fmt.Printf("üìã –ù–∞–∑–≤–∞–Ω–∏–µ: %s\n", data["name"])
					fmt.Printf("üÜî ID: %s\n", data["id"])
					fmt.Printf("üåê –¢–∏–ø: %s\n", data["type"])
					fmt.Printf("üéØ –¶–µ–ª—å: %s\n", data["target"])
					fmt.Printf("‚è±Ô∏è –ò–Ω—Ç–µ—Ä–≤–∞–ª: %v —Å–µ–∫\n", data["interval"])
					fmt.Printf("‚è≥Ô∏è –¢–∞–π–º–∞—É—Ç: %v —Å–µ–∫\n", data["timeout"])
					fmt.Printf("‚úÖ –°—Ç–∞—Ç—É—Å: %s\n", data["status"])
					fmt.Printf("üìÖ –°–æ–∑–¥–∞–Ω–∞: %s\n", data["created_at"])
				}
			} else {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞: —Å–µ—Ä–≤–µ—Ä –≤–µ—Ä–Ω—É–ª —Å—Ç–∞—Ç—É—Å %d\n", resp.StatusCode)
			}
		},
	}

	// Checks delete
	deleteCmd := &cobra.Command{
		Use:   "delete",
		Short: "–£–¥–∞–ª–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É",
		Args:  cobra.ExactArgs(1),
		Run: func(cmd *cobra.Command, args []string) {
			checkID := args[0]
			fmt.Printf("üîÑ –£–¥–∞–ª–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏ %s...\n", checkID)

			resp, err := httpClient.makeRequest("DELETE", "/api/v1/checks/"+checkID, nil, true)
			if err != nil {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞ —É–¥–∞–ª–µ–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∏: %v\n", err)
				os.Exit(1)
			}
			defer resp.Body.Close()

			if resp.StatusCode == http.StatusOK || resp.StatusCode == http.StatusNoContent {
				fmt.Printf("‚úÖ –ü—Ä–æ–≤–µ—Ä–∫–∞ %s —É–¥–∞–ª–µ–Ω–∞ —É—Å–ø–µ—à–Ω–æ!\n", checkID)
			} else {
				fmt.Printf("‚ùå –û—à–∏–±–∫–∞: —Å–µ—Ä–≤–µ—Ä –≤–µ—Ä–Ω—É–ª —Å—Ç–∞—Ç—É—Å %d\n", resp.StatusCode)
			}
		},
	}

	// –î–æ–±–∞–≤–ª—è–µ–º checks –∫–æ–º–∞–Ω–¥—ã
	checksCmd.AddCommand(listCmd)
	checksCmd.AddCommand(createCmd)
	checksCmd.AddCommand(getCmd)
	checksCmd.AddCommand(deleteCmd)

	// –î–æ–±–∞–≤–ª—è–µ–º –≤—Å–µ –∫–æ–º–∞–Ω–¥—ã –≤ root
	rootCmd.AddCommand(authCmd)
	rootCmd.AddCommand(checksCmd)

	// –ó–∞–ø—É—Å–∫–∞–µ–º
	if err := rootCmd.Execute(); err != nil {
		fmt.Printf("–û—à–∏–±–∫–∞: %v\n", err)
		os.Exit(1)
	}
}
