package cmd

import (
	"context"
	"fmt"
	"strconv"
	"strings"
	"time"

	"github.com/spf13/cobra"

	"UptimePingPlatform/pkg/validation"
	"UptimePingPlatform/services/cli-service/internal/auth"
	"UptimePingPlatform/services/cli-service/internal/client"
	cliConfig "UptimePingPlatform/services/cli-service/internal/config"
)

var checksCmd = &cobra.Command{
	Use:   "checks",
	Short: "–£–ø—Ä–∞–≤–ª–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∞–º–∏",
	Long: `–ö–æ–º–∞–Ω–¥—ã –¥–ª—è —É–ø—Ä–∞–≤–ª–µ–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∞–º–∏ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏:
–∑–∞–ø—É—Å–∫, –ø—Ä–æ–≤–µ—Ä–∫–∞ —Å—Ç–∞—Ç—É—Å–∞, –ø—Ä–æ—Å–º–æ—Ç—Ä –∏—Å—Ç–æ—Ä–∏–∏ –∏ —Å–ø–∏—Å–∫–∞ –ø—Ä–æ–≤–µ—Ä–æ–∫.`,
}

var checksCreateCmd = &cobra.Command{
	Use:   "create",
	Short: "–°–æ–∑–¥–∞—Ç—å –Ω–æ–≤—É—é –ø—Ä–æ–≤–µ—Ä–∫—É",
	Long: `–°–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—É—é –ø—Ä–æ–≤–µ—Ä–∫—É –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏ —Å —É–∫–∞–∑–∞–Ω–Ω—ã–º–∏ –ø–∞—Ä–∞–º–µ—Ç—Ä–∞–º–∏.
–ü–æ–¥–¥–µ—Ä–∂–∏–≤–∞—é—Ç—Å—è HTTP, TCP, ICMP, gRPC –∏ GraphQL –ø—Ä–æ–≤–µ—Ä–∫–∏.`,
	RunE: handleChecksCreate,
}

var checksGetCmd = &cobra.Command{
	Use:   "get [check-id]",
	Short: "–ü–æ–ª—É—á–∏—Ç—å –¥–µ—Ç–∞–ª–∏ –ø—Ä–æ–≤–µ—Ä–∫–∏",
	Long:  `–û—Ç–æ–±—Ä–∞–∂–∞–µ—Ç –¥–µ—Ç–∞–ª—å–Ω—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø—Ä–æ–≤–µ—Ä–∫–µ –ø–æ –µ–µ ID.`,
	Args:  cobra.ExactArgs(1),
	RunE:  handleChecksGet,
}

var checksUpdateCmd = &cobra.Command{
	Use:   "update [check-id]",
	Short: "–û–±–Ω–æ–≤–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É",
	Long:  `–û–±–Ω–æ–≤–ª—è–µ—Ç –ø–∞—Ä–∞–º–µ—Ç—Ä—ã —Å—É—â–µ—Å—Ç–≤—É—é—â–µ–π –ø—Ä–æ–≤–µ—Ä–∫–∏.`,
	Args:  cobra.ExactArgs(1),
	RunE:  handleChecksUpdate,
}

var checksEnableCmd = &cobra.Command{
	Use:   "enable [check-id]",
	Short: "–í–∫–ª—é—á–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É",
	Long:  `–í–∫–ª—é—á–∞–µ—Ç –≤—ã–ø–æ–ª–Ω–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏ –ø–æ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—é.`,
	Args:  cobra.ExactArgs(1),
	RunE:  handleChecksEnable,
}

var checksDisableCmd = &cobra.Command{
	Use:   "disable [check-id]",
	Short: "–û—Ç–∫–ª—é—á–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É",
	Long:  `–û—Ç–∫–ª—é—á–∞–µ—Ç –≤—ã–ø–æ–ª–Ω–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏ –ø–æ —Ä–∞—Å–ø–∏—Å–∞–Ω–∏—é.`,
	Args:  cobra.ExactArgs(1),
	RunE:  handleChecksDisable,
}

var checksDeleteCmd = &cobra.Command{
	Use:   "delete [check-id]",
	Short: "–£–¥–∞–ª–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É",
	Long:  `–£–¥–∞–ª—è–µ—Ç –ø—Ä–æ–≤–µ—Ä–∫—É –∏ –≤—Å–µ —Å–≤—è–∑–∞–Ω–Ω—ã–µ —Å –Ω–µ–π –¥–∞–Ω–Ω—ã–µ.`,
	Args:  cobra.ExactArgs(1),
	RunE:  handleChecksDelete,
}

var checksListCmd = &cobra.Command{
	Use:   "list",
	Short: "–ü–æ–∫–∞–∑–∞—Ç—å —Å–ø–∏—Å–æ–∫ –ø—Ä–æ–≤–µ—Ä–æ–∫",
	Long:  `–û—Ç–æ–±—Ä–∞–∂–∞–µ—Ç –≤—Å–µ –¥–æ—Å—Ç—É–ø–Ω—ã–µ –ø—Ä–æ–≤–µ—Ä–∫–∏ —Å –≤–æ–∑–º–æ–∂–Ω–æ—Å—Ç—å—é —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏.`,
	RunE:  handleChecksList,
}

func init() {
	checksCmd.AddCommand(checksCreateCmd)
	checksCmd.AddCommand(checksGetCmd)
	checksCmd.AddCommand(checksUpdateCmd)
	checksCmd.AddCommand(checksEnableCmd)
	checksCmd.AddCommand(checksDisableCmd)
	checksCmd.AddCommand(checksDeleteCmd)
	checksCmd.AddCommand(checksListCmd)

	// Checks create flags
	checksCreateCmd.Flags().StringP("name", "n", "", "–Ω–∞–∑–≤–∞–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏ (–æ–±—è–∑–∞—Ç–µ–ª—å–Ω–æ)")
	checksCreateCmd.Flags().StringP("url", "u", "", "URL –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ (–æ–±—è–∑–∞—Ç–µ–ª—å–Ω–æ –¥–ª—è HTTP/HTTPS)")
	checksCreateCmd.Flags().StringP("type", "t", "http", "—Ç–∏–ø –ø—Ä–æ–≤–µ—Ä–∫–∏ (http, https, tcp, icmp, grpc, graphql)")
	checksCreateCmd.Flags().IntP("interval", "i", 60, "–∏–Ω—Ç–µ—Ä–≤–∞–ª –ø—Ä–æ–≤–µ—Ä–∫–∏ –≤ —Å–µ–∫—É–Ω–¥–∞—Ö")
	checksCreateCmd.Flags().IntP("timeout", "m", 10, "—Ç–∞–π–º–∞—É—Ç –≤ —Å–µ–∫—É–Ω–¥–∞—Ö")
	checksCreateCmd.Flags().StringSliceP("tags", "g", []string{}, "—Ç–µ–≥–∏ –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏")
	checksCreateCmd.Flags().BoolP("enabled", "e", true, "–≤–∫–ª—é—á–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É")

	// Checks update flags
	checksUpdateCmd.Flags().StringP("name", "n", "", "–Ω–æ–≤–æ–µ –Ω–∞–∑–≤–∞–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏")
	checksUpdateCmd.Flags().StringP("url", "u", "", "–Ω–æ–≤—ã–π URL –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏")
	checksUpdateCmd.Flags().IntP("interval", "i", 0, "–Ω–æ–≤—ã–π –∏–Ω—Ç–µ—Ä–≤–∞–ª –ø—Ä–æ–≤–µ—Ä–∫–∏ –≤ —Å–µ–∫—É–Ω–¥–∞—Ö")
	checksUpdateCmd.Flags().IntP("timeout", "m", 0, "–Ω–æ–≤—ã–π —Ç–∞–π–º–∞—É—Ç –≤ —Å–µ–∫—É–Ω–¥–∞—Ö")
	checksUpdateCmd.Flags().StringSliceP("tags", "g", []string{}, "–Ω–æ–≤—ã–µ —Ç–µ–≥–∏ –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏")
	checksUpdateCmd.Flags().BoolP("enabled", "e", false, "–≤–∫–ª—é—á–∏—Ç—å/–æ—Ç–∫–ª—é—á–∏—Ç—å –ø—Ä–æ–≤–µ—Ä–∫—É")

	// Checks list flags
	checksListCmd.Flags().StringSliceP("tags", "t", []string{}, "—Ñ–∏–ª—å—Ç—Ä –ø–æ —Ç–µ–≥–∞–º")
	checksListCmd.Flags().BoolP("enabled", "e", false, "—Ñ–∏–ª—å—Ç—Ä –ø–æ —Å—Ç–∞—Ç—É—Å—É (enabled/disabled)")
	checksListCmd.Flags().IntP("page", "p", 1, "–Ω–æ–º–µ—Ä —Å—Ç—Ä–∞–Ω–∏—Ü—ã")
	checksListCmd.Flags().IntP("limit", "l", 20, "–ª–∏–º–∏—Ç –∑–∞–ø–∏—Å–µ–π –Ω–∞ —Å—Ç—Ä–∞–Ω–∏—Ü–µ")
	checksListCmd.Flags().StringP("format", "f", "table", "—Ñ–æ—Ä–º–∞—Ç –≤—ã–≤–æ–¥–∞ (table, json)")
}

func GetChecksCmd() *cobra.Command {
	return checksCmd
}

func handleChecksList(cmd *cobra.Command, args []string) error {
	page, _ := cmd.Flags().GetInt("page")
	limit, _ := cmd.Flags().GetInt("limit")
	format, _ := cmd.Flags().GetString("format")

	// Load configuration
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—É—Ç–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –º–µ–Ω–µ–¥–∂–µ—Ä–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏: %w", err)
	}
	defer authManager.Close()

	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏: %w", err)
	}

	// Create checks client instead of config client
	checksClient := client.NewChecksClient(cfg.API.BaseURL, authManager.GetTokenStore())
	defer checksClient.Close()

	// Get checks list
	checks, err := checksClient.ListChecks(ctx)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å–ø–∏—Å–∫–∞ –ø—Ä–æ–≤–µ—Ä–æ–∫: %w", err)
	}

	if len(checks) == 0 {
		fmt.Printf("üì≠ –ü—Ä–æ–≤–µ—Ä–∫–∏ –Ω–µ –Ω–∞–π–¥–µ–Ω—ã\n")
		return nil
	}

	switch format {
	case "json":
		fmt.Println("[")
		for i, check := range checks {
			if i > 0 {
				fmt.Println(",")
			}
			fmt.Printf(`  {"id": "%s", "name": "%s", "type": "%s", "target": "%s", "interval": %d, "timeout": %d, "enabled": %t, "tags": [%s], "created_at": "%s"}`,
				check.ID,
				check.Name,
				check.Type,
				check.Target,
				check.Interval,
				check.Timeout,
				check.Enabled,
				strings.Join(check.Tags, ", "),
				check.CreatedAt)
		}
		fmt.Println("\n]")
	default:
		fmt.Printf("üìã –°–ø–∏—Å–æ–∫ –ø—Ä–æ–≤–µ—Ä–æ–∫ (—Å—Ç—Ä–∞–Ω–∏—Ü–∞ %d):\n", page)
		fmt.Printf("%-20s %-25s %-10s %-30s %-10s %-10s %s\n", "üîç ID", "üìù –ù–∞–∑–≤–∞–Ω–∏–µ", "üîß –¢–∏–ø", "üéØ –¶–µ–ª—å", "‚è±Ô∏è –ò–Ω—Ç–µ—Ä–≤–∞–ª", "‚è∞ –¢–∞–π–º–∞—É—Ç", "üè∑Ô∏è –¢–µ–≥–∏")
		fmt.Println(strings.Repeat("-", 120))

		for _, check := range checks {
			id := check.ID
			if len(id) > 18 {
				id = id[:15] + "..."
			}

			name := check.Name
			if len(name) > 23 {
				name = name[:20] + "..."
			}

			target := check.Target
			if len(target) > 28 {
				target = target[:25] + "..."
			}

			interval := fmt.Sprintf("%ds", check.Interval)
			timeout := fmt.Sprintf("%ds", check.Timeout)

			tags := strings.Join(check.Tags, ", ")
			if tags == "" {
				tags = "-"
			}

			fmt.Printf("%-20s %-25s %-10s %-30s %-10s %-10s %s\n", id, name, check.Type, target, interval, timeout, tags)
		}
	}

	fmt.Printf("\nüìä –í—Å–µ–≥–æ –ø—Ä–æ–≤–µ—Ä–æ–∫: %d\n", len(checks))
	fmt.Printf("üìÑ –°—Ç—Ä–∞–Ω–∏—Ü–∞: %d –∏–∑ %d\n", page, (len(checks)+limit-1)/limit)

	return nil
}

// handleChecksCreate –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç —Å–æ–∑–¥–∞–Ω–∏–µ –Ω–æ–≤–æ–π –ø—Ä–æ–≤–µ—Ä–∫–∏
func handleChecksCreate(cmd *cobra.Command, args []string) error {
	// –ó–∞–≥—Ä—É–∑–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ CLI
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—É—Ç–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –º–µ–Ω–µ–¥–∂–µ—Ä–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏: %w", err)
	}
	defer authManager.Close()

	// Get token
	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø—Ä–æ–≤–µ—Ä–∫–∏ —Ç–æ–∫–µ–Ω–∞: %w", err)
	}

	token := authManager.GetTokenStore().GetAccessToken()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –∫–æ–Ω—Ç–µ–∫—Å—Ç
	ctx = context.WithValue(ctx, "access_token", token)

	// Get flags
	name, _ := cmd.Flags().GetString("name")
	url, _ := cmd.Flags().GetString("url")
	checkType, _ := cmd.Flags().GetString("type")
	interval, _ := cmd.Flags().GetInt("interval")
	timeout, _ := cmd.Flags().GetInt("timeout")
	tags, _ := cmd.Flags().GetStringSlice("tags")
	enabled, _ := cmd.Flags().GetBool("enabled")

	// Validate required fields
	if name == "" {
		return fmt.Errorf("—Ñ–ª–∞–≥ --name –æ–±—è–∑–∞—Ç–µ–ª–µ–Ω")
	}

	if checkType == "http" || checkType == "https" {
		if url == "" {
			return fmt.Errorf("—Ñ–ª–∞–≥ --url –æ–±—è–∑–∞—Ç–µ–ª–µ–Ω –¥–ª—è HTTP/HTTPS –ø—Ä–æ–≤–µ—Ä–æ–∫")
		}
	}

	// Create checks client
	checksClient := client.NewChecksClient(cfg.API.BaseURL, authManager.GetTokenStore())
	defer checksClient.Close()

	// Create check request
	request := &client.Check{
		Name:     name,
		Type:     checkType,
		Target:   url,
		Interval: interval,
		Timeout:  timeout,
		Tags:     tags,
		Metadata: map[string]interface{}{
			"enabled": fmt.Sprintf("%t", enabled),
		},
	}

	// Create check
	response, err := checksClient.CreateCheck(ctx, request)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// Display result
	fmt.Printf("‚úÖ –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–æ–∑–¥–∞–Ω–∞ —É—Å–ø–µ—à–Ω–æ!\n")
	fmt.Printf("üìù ID: %s\n", response.ID)
	fmt.Printf("üîó URL: %s\n", response.Target)
	fmt.Printf("‚è±Ô∏è –ò–Ω—Ç–µ—Ä–≤–∞–ª: %d —Å–µ–∫—É–Ω–¥\n", response.Interval)
	fmt.Printf("‚è∞ –¢–∞–π–º–∞—É—Ç: %d —Å–µ–∫—É–Ω–¥\n", response.Timeout)
	if len(response.Tags) > 0 {
		fmt.Printf("üè∑Ô∏è –¢–µ–≥–∏: %s\n", strings.Join(response.Tags, ", "))
	}
	fmt.Printf("üîß –°—Ç–∞—Ç—É—Å: ")
	if response.Enabled {
		fmt.Printf("–í–∫–ª—é—á–µ–Ω–∞\n")
	} else {
		fmt.Printf("–û—Ç–∫–ª—é—á–µ–Ω–∞\n")
	}

	return nil
}

// handleChecksGet –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –ø–æ–ª—É—á–µ–Ω–∏–µ –¥–µ—Ç–∞–ª–µ–π –ø—Ä–æ–≤–µ—Ä–∫–∏
func handleChecksGet(cmd *cobra.Command, args []string) error {
	checkID := args[0]

	// –í–∞–ª–∏–¥–∞—Ü–∏—è UUID
	validator := &validation.Validator{}
	if err := validator.ValidateUUID(checkID, "check_id"); err != nil {
		return fmt.Errorf("–Ω–µ–≤–∞–ª–∏–¥–Ω—ã–π ID –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// –ó–∞–≥—Ä—É–∑–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ CLI
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—É—Ç–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –º–µ–Ω–µ–¥–∂–µ—Ä–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏: %w", err)
	}
	defer authManager.Close()

	// Get token
	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø—Ä–æ–≤–µ—Ä–∫–∏ —Ç–æ–∫–µ–Ω–∞: %w", err)
	}

	token := authManager.GetTokenStore().GetAccessToken()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –∫–æ–Ω—Ç–µ–∫—Å—Ç
	ctx = context.WithValue(ctx, "access_token", token)

	// Create checks client instead of config client
	checksClient := client.NewChecksClient(cfg.API.BaseURL, authManager.GetTokenStore())
	defer checksClient.Close()

	// Get check
	check, err := checksClient.GetCheck(ctx, checkID)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// Display result
	fmt.Printf("‚úÖ –î–µ—Ç–∞–ª–∏ –ø—Ä–æ–≤–µ—Ä–∫–∏:\n\n")
	fmt.Printf("üìù ID: %s\n", check.ID)
	fmt.Printf("üîó –ù–∞–∑–≤–∞–Ω–∏–µ: %s\n", check.Name)
	fmt.Printf("üåê –¢–∏–ø: %s\n", check.Type)
	fmt.Printf("üéØ –¶–µ–ª—å: %s\n", check.Target)
	fmt.Printf("‚è±Ô∏è –ò–Ω—Ç–µ—Ä–≤–∞–ª: %d —Å–µ–∫—É–Ω–¥\n", check.Interval)
	fmt.Printf("‚è∞ –¢–∞–π–º–∞—É—Ç: %d —Å–µ–∫—É–Ω–¥\n", check.Timeout)

	if len(check.Tags) > 0 {
		fmt.Printf("üè∑Ô∏è –¢–µ–≥–∏: %s\n", strings.Join(check.Tags, ", "))
	}

	fmt.Printf("üîß –°—Ç–∞—Ç—É—Å: ")
	if check.Enabled {
		fmt.Printf("–í–∫–ª—é—á–µ–Ω–∞\n")
	} else {
		fmt.Printf("–û—Ç–∫–ª—é—á–µ–Ω–∞\n")
	}

	if check.CreatedAt != "" {
		// –ü—Ä–æ–±—É–µ–º —Ä–∞—Å–ø–∞—Ä—Å–∏—Ç—å –∫–∞–∫ Unix timestamp
		if timestamp, err := strconv.ParseInt(check.CreatedAt, 10, 64); err == nil {
			parsedTime := time.Unix(timestamp, 0)
			fmt.Printf("üìÖ –°–æ–∑–¥–∞–Ω–∞: %s\n", parsedTime.Format("2006-01-02 15:04:05"))
		} else if parsedTime, err := time.Parse(time.RFC3339, check.CreatedAt); err == nil {
			fmt.Printf("üìÖ –°–æ–∑–¥–∞–Ω–∞: %s\n", parsedTime.Format("2006-01-02 15:04:05"))
		}
	}

	if check.UpdatedAt != "" {
		// –ü—Ä–æ–±—É–µ–º —Ä–∞—Å–ø–∞—Ä—Å–∏—Ç—å –∫–∞–∫ Unix timestamp
		if timestamp, err := strconv.ParseInt(check.UpdatedAt, 10, 64); err == nil {
			parsedTime := time.Unix(timestamp, 0)
			fmt.Printf("üîÑ –û–±–Ω–æ–≤–ª–µ–Ω–∞: %s\n", parsedTime.Format("2006-01-02 15:04:05"))
		} else if parsedTime, err := time.Parse(time.RFC3339, check.UpdatedAt); err == nil {
			fmt.Printf("üîÑ –û–±–Ω–æ–≤–ª–µ–Ω–∞: %s\n", parsedTime.Format("2006-01-02 15:04:05"))
		}
	}

	return nil
}

// handleChecksUpdate –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏
func handleChecksUpdate(cmd *cobra.Command, args []string) error {
	checkID := args[0]

	// –í–∞–ª–∏–¥–∞—Ü–∏—è UUID
	validator := &validation.Validator{}
	if err := validator.ValidateUUID(checkID, "check_id"); err != nil {
		return fmt.Errorf("–Ω–µ–≤–∞–ª–∏–¥–Ω—ã–π ID –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// –ó–∞–≥—Ä—É–∑–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ CLI
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—É—Ç–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –º–µ–Ω–µ–¥–∂–µ—Ä–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏: %w", err)
	}
	defer authManager.Close()

	// Get token
	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø—Ä–æ–≤–µ—Ä–∫–∏ —Ç–æ–∫–µ–Ω–∞: %w", err)
	}

	token := authManager.GetTokenStore().GetAccessToken()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –∫–æ–Ω—Ç–µ–∫—Å—Ç
	ctx = context.WithValue(ctx, "access_token", token)

	// Get flags
	name, _ := cmd.Flags().GetString("name")
	url, _ := cmd.Flags().GetString("url")
	interval, _ := cmd.Flags().GetInt("interval")
	timeout, _ := cmd.Flags().GetInt("timeout")
	tags, _ := cmd.Flags().GetStringSlice("tags")
	enabled, _ := cmd.Flags().GetBool("enabled")

	// –ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ —Ö–æ—Ç—è –±—ã –æ–¥–∏–Ω —Ñ–ª–∞–≥ —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω
	if name == "" && url == "" && interval == 0 && timeout == 0 && len(tags) == 0 && !cmd.Flags().Changed("enabled") {
		return fmt.Errorf("–Ω–µ–æ–±—Ö–æ–¥–∏–º–æ —É–∫–∞–∑–∞—Ç—å —Ö–æ—Ç—è –±—ã –æ–¥–∏–Ω –ø–∞—Ä–∞–º–µ—Ç—Ä –¥–ª—è –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è")
	}

	// Create checks client
	checksClient := client.NewChecksClient(cfg.API.BaseURL, authManager.GetTokenStore())
	defer checksClient.Close()

	// Create update request
	request := &client.Check{
		Metadata: map[string]interface{}{},
	}

	// –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º —Ç–æ–ª—å–∫–æ —Ç–µ –ø–æ–ª—è, –∫–æ—Ç–æ—Ä—ã–µ –±—ã–ª–∏ –∏–∑–º–µ–Ω–µ–Ω—ã
	if name != "" {
		request.Name = name
	}
	if url != "" {
		request.Target = url
	}
	if interval > 0 {
		request.Interval = interval
	}
	if timeout > 0 {
		request.Timeout = timeout
	}
	if len(tags) > 0 {
		request.Tags = tags
	}
	if cmd.Flags().Changed("enabled") {
		request.Enabled = enabled
		request.Metadata["enabled"] = fmt.Sprintf("%t", enabled)
	}

	// Update check
	response, err := checksClient.UpdateCheck(ctx, checkID, request)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// Display result
	fmt.Printf("‚úÖ –ü—Ä–æ–≤–µ—Ä–∫–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∞ —É—Å–ø–µ—à–Ω–æ!\n")
	fmt.Printf("üìù ID: %s\n", response.ID)
	fmt.Printf("üîó –ù–∞–∑–≤–∞–Ω–∏–µ: %s\n", response.Name)
	fmt.Printf("üéØ –¶–µ–ª—å: %s\n", response.Target)
	fmt.Printf("‚è±Ô∏è –ò–Ω—Ç–µ—Ä–≤–∞–ª: %d —Å–µ–∫—É–Ω–¥\n", response.Interval)
	fmt.Printf("‚è∞ –¢–∞–π–º–∞—É—Ç: %d —Å–µ–∫—É–Ω–¥\n", response.Timeout)

	if len(response.Tags) > 0 {
		fmt.Printf("üè∑Ô∏è –¢–µ–≥–∏: %s\n", strings.Join(response.Tags, ", "))
	}

	fmt.Printf("üîß –°—Ç–∞—Ç—É—Å: ")
	if response.Enabled {
		fmt.Printf("–í–∫–ª—é—á–µ–Ω–∞\n")
	} else {
		fmt.Printf("–û—Ç–∫–ª—é—á–µ–Ω–∞\n")
	}

	return nil
}

// handleChecksEnable –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –≤–∫–ª—é—á–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏
func handleChecksEnable(cmd *cobra.Command, args []string) error {
	return handleChecksToggle(cmd, args, true)
}

// handleChecksDisable –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –æ—Ç–∫–ª—é—á–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏
func handleChecksDisable(cmd *cobra.Command, args []string) error {
	return handleChecksToggle(cmd, args, false)
}

// handleChecksToggle –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –≤–∫–ª—é—á–µ–Ω–∏–µ/–æ—Ç–∫–ª—é—á–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏
func handleChecksToggle(cmd *cobra.Command, args []string, enabled bool) error {
	checkID := args[0]

	// –í–∞–ª–∏–¥–∞—Ü–∏—è UUID
	validator := &validation.Validator{}
	if err := validator.ValidateUUID(checkID, "check_id"); err != nil {
		return fmt.Errorf("–Ω–µ–≤–∞–ª–∏–¥–Ω—ã–π ID –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// –ó–∞–≥—Ä—É–∑–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ CLI
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—É—Ç–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –º–µ–Ω–µ–¥–∂–µ—Ä–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏: %w", err)
	}
	defer authManager.Close()

	// Get token
	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø—Ä–æ–≤–µ—Ä–∫–∏ —Ç–æ–∫–µ–Ω–∞: %w", err)
	}

	token := authManager.GetTokenStore().GetAccessToken()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –∫–æ–Ω—Ç–µ–∫—Å—Ç
	ctx = context.WithValue(ctx, "access_token", token)

	// Create checks client
	checksClient := client.NewChecksClient(cfg.API.BaseURL, authManager.GetTokenStore())
	defer checksClient.Close()

	// Create update request
	request := &client.Check{
		Enabled: enabled,
		Metadata: map[string]interface{}{
			"enabled": fmt.Sprintf("%t", enabled),
		},
	}

	// Update check
	response, err := checksClient.UpdateCheck(ctx, checkID, request)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ %s –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", func() string {
			if enabled {
				return "–≤–∫–ª—é—á–µ–Ω–∏—è"
			}
			return "–æ—Ç–∫–ª—é—á–µ–Ω–∏—è"
		}(), err)
	}

	// Display result
	action := "–æ—Ç–∫–ª—é—á–µ–Ω–∞"
	if enabled {
		action = "–≤–∫–ª—é—á–µ–Ω–∞"
	}

	fmt.Printf("‚úÖ –ü—Ä–æ–≤–µ—Ä–∫–∞ %s —É—Å–ø–µ—à–Ω–æ!\n", action)
	fmt.Printf("üìù ID: %s\n", response.ID)
	fmt.Printf("üîó –ù–∞–∑–≤–∞–Ω–∏–µ: %s\n", response.Name)
	fmt.Printf("üîß –°—Ç–∞—Ç—É—Å: %s\n", action)

	return nil
}

// handleChecksDelete –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç —É–¥–∞–ª–µ–Ω–∏–µ –ø—Ä–æ–≤–µ—Ä–∫–∏
func handleChecksDelete(cmd *cobra.Command, args []string) error {
	checkID := args[0]

	// –í–∞–ª–∏–¥–∞—Ü–∏—è UUID
	validator := &validation.Validator{}
	if err := validator.ValidateUUID(checkID, "check_id"); err != nil {
		return fmt.Errorf("–Ω–µ–≤–∞–ª–∏–¥–Ω—ã–π ID –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// –ó–∞–≥—Ä—É–∑–∫–∞ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ CLI
	configPath, err := cliConfig.GetConfigPath()
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è –ø—É—Ç–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	cfg, err := cliConfig.LoadConfig(configPath)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –∑–∞–≥—Ä—É–∑–∫–∏ –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏: %w", err)
	}

	// Create auth manager and ensure valid token
	authManager, err := auth.NewAuthManager(cfg)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —Å–æ–∑–¥–∞–Ω–∏—è –º–µ–Ω–µ–¥–∂–µ—Ä–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏: %w", err)
	}
	defer authManager.Close()

	// Get token
	ctx := context.Background()
	if err := authManager.EnsureValidToken(ctx); err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ –ø—Ä–æ–≤–µ—Ä–∫–∏ —Ç–æ–∫–µ–Ω–∞: %w", err)
	}

	token := authManager.GetTokenStore().GetAccessToken()

	// –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –≤ –∫–æ–Ω—Ç–µ–∫—Å—Ç
	ctx = context.WithValue(ctx, "access_token", token)

	// Create checks client
	checksClient := client.NewChecksClient(cfg.API.BaseURL, authManager.GetTokenStore())
	defer checksClient.Close()

	// Delete check
	err = checksClient.DeleteCheck(ctx, checkID)
	if err != nil {
		return fmt.Errorf("–æ—à–∏–±–∫–∞ —É–¥–∞–ª–µ–Ω–∏—è –ø—Ä–æ–≤–µ—Ä–∫–∏: %w", err)
	}

	// Display result
	fmt.Printf("‚úÖ –ü—Ä–æ–≤–µ—Ä–∫–∞ —É–¥–∞–ª–µ–Ω–∞ —É—Å–ø–µ—à–Ω–æ!\n")
	fmt.Printf("üìù ID: %s\n", checkID)
	fmt.Printf("üóëÔ∏è –í—Å–µ —Å–≤—è–∑–∞–Ω–Ω—ã–µ –¥–∞–Ω–Ω—ã–µ —Ç–∞–∫–∂–µ —É–¥–∞–ª–µ–Ω—ã\n")

	return nil
}
